--- a/File_Sharing-31-01-20/css/siterating.css
+++ b/File_Sharing-31-01-20/css/siterating.css
@@ -63,11 +63,11 @@ th:last-child {
 
 tr {
   border-top: 1px solid #C1C3D1;
-  border-bottom-: 1px solid #C1C3D1;
+  border-bottom: 1px solid #C1C3D1;
   color:#666B85;
   font-size:16px;
   font-weight:normal;
-  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.1);
 }
 
 tr:hover td {
